article: Fix settings' icon alignment
Bug: 70147

--- a/resources/ext.popups.core.less
+++ b/resources/ext.popups.core.less
@@ -95,6 +95,7 @@
 
 		.mwe-popups-settings-icon {
 			display: inline-block;
+			vertical-align: text-top;
 			cursor: pointer;
 			margin-left: 5px;
 			height: 16px;
